<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/login_img_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_img_heard"
            android:layout_width="@dimen/x85"
            android:layout_height="@dimen/x85"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/x80"
            android:src="@mipmap/ic_launcher" />


        <EditText
            android:id="@+id/login_et_account"
            style="@style/login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x50"
            android:drawableLeft="@mipmap/login_account"
            android:hint="@string/login_account"
            android:paddingRight="@dimen/x30" />

        <EditText
            android:id="@+id/login_et_password"
            style="@style/login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x30"
            android:drawableLeft="@mipmap/login_password"
            android:hint="@string/login_pwd"
            android:inputType="textPassword"
            android:paddingRight="@dimen/x30" />


        <Button
            android:id="@+id/login_btn"
            style="@style/login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x80"
            android:paddingBottom="@dimen/x8"
            android:paddingTop="@dimen/x8"
            android:text="@string/login_login" />

    </LinearLayout>


</FrameLayout>